--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div>
     <%=image_tag"logoweb.png", :class => "logos"%>
     <div>
-      <h3> Amesterdam Barcelona Lisbon</h3>
+      <h3> Amsterdam Barcelona Lisbon</h3>
     <div>
       <h2>For Business Enquires :</h2>
     </div>
