--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,10 +10,5 @@
       <h1> <A HREF="mailto:info@livlisbonagency.com"' style='color: white; text-decoration: none '>info@livlisbonagency.com</A></h1>
     </div>
   </div>
-  <p>© <%= Date.today.year %> LIV Lisbon Productions</p>
+  <p>© <%= Date.today.year %> LIV Lisbon Agency</p>
 </body>
-
-
-
-
-home
